# iris_micro_gui

./: .gitignore  pyproject.toml
src/: compile.sh  iris_cli.py  main.py  run
src/resources/iris-micro-linux-0.0.7/: README.txt  day_mode.sh  iris-micro.sh  night_mode.sh  reset.sh
src/resources/iris-micro-linux-0.0.7/addons/: README.txt
